# sequence_optimization

./: CMakeLists.txt  draw_util.cpp  draw_util.h  json.h  main.cpp
data/tracklets/: 10102112_1280x720.gz.json
include/: cost_function.h  log_error_info.cpp  log_error_info.h  ls_optimization.cpp  ls_optimization.h  read_data.h  system_parameters.h  utils.h
src/: cost_function.h  log_error_info.cpp  log_error_info.h  ls_optimization.cpp  ls_optimization.h  main.cpp  read_data.cpp  utils.cpp  utils.h
